@@ -6,6 +6,7 @@ class RemoteCredoraxTest < Test::Unit::TestCase
 
     @amount = 100
     @credit_card = credit_card('4176661000001015', verification_value: '281', month: '12', year: '2022')
+    @fully_auth_card = credit_card('5223450000000007', brand: 'mastercard', verification_value: '090', month: '12', year: '2025')
     @declined_card = credit_card('4176661000001111', verification_value: '681', month: '12', year: '2022')
     @options = {
       order_id: '1',
@@ -35,10 +36,76 @@ class RemoteCredoraxTest < Test::Unit::TestCase
     assert_equal 'Succeeded', response.message
   end
 
+  def test_successful_purchase_with_auth_data_via_3ds1_fields
+    options = @options.merge(
+      eci: '02',
+      cavv: 'jJ81HADVRtXfCBATEp01CJUAAAA=',
+      xid: '00000000000000000501'
+    )
+
+    response = @gateway.purchase(@amount, @fully_auth_card, options)
+    assert_success response
+    assert_equal '1', response.params['H9']
+    assert_equal 'Succeeded', response.message
+  end
+
+  def test_successful_purchase_with_auth_data_via_normalized_3ds2_options
+    version = '2.0'
+    eci = '02'
+    cavv = 'jJ81HADVRtXfCBATEp01CJUAAAA='
+    ds_transaction_id = '97267598-FAE6-48F2-8083-C23433990FBC'
+    options = @options.merge(
+      three_d_secure: {
+        version: version,
+        eci: eci,
+        cavv: cavv,
+        ds_transaction_id: ds_transaction_id
+      }
+    )
+
+    response = @gateway.purchase(@amount, @fully_auth_card, options)
+    assert_success response
+    assert_equal '1', response.params['H9']
+    assert_equal 'Succeeded', response.message
+  end
+
   def test_failed_purchase
     response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
     assert_equal 'Transaction not allowed for cardholder', response.message
+  end
+
+  def test_failed_purchase_invalid_auth_data_via_3ds1_fields
+    options = @options.merge(
+      eci: '02',
+      cavv: 'jJ81HADVRtXfCBATEp01CJUAAAA=',
+      xid: 'this is not a valid xid, it will be rejected'
+    )
+
+    response = @gateway.purchase(@amount, @fully_auth_card, options)
+    assert_failure response
+    assert_equal '-9', response.params['Z2']
+    assert_match 'Parameter i8 is invalid', response.message
+  end
+
+  def test_failed_purchase_invalid_auth_data_via_normalized_3ds2_options
+    version = '2.0'
+    eci = '02'
+    cavv = 'BOGUS'
+    ds_transaction_id = '97267598-FAE6-48F2-8083-C23433990FBC'
+    options = @options.merge(
+      three_d_secure: {
+        version: version,
+        eci: eci,
+        cavv: cavv,
+        ds_transaction_id: ds_transaction_id
+      }
+    )
+
+    response = @gateway.purchase(@amount, @fully_auth_card, options)
+    assert_failure response
+    assert_equal '-9', response.params['Z2']
+    assert_match 'malformed', response.message
   end
 
   def test_successful_authorize_and_capture
@@ -50,6 +117,39 @@ class RemoteCredoraxTest < Test::Unit::TestCase
     capture = @gateway.capture(@amount, response.authorization)
     assert_success capture
     assert_equal 'Succeeded', capture.message
+  end
+
+  def test_successful_authorize_with_auth_data_via_3ds1_fields
+    options = @options.merge(
+      eci: '02',
+      cavv: 'jJ81HADVRtXfCBATEp01CJUAAAA=',
+      xid: '00000000000000000501'
+    )
+
+    response = @gateway.authorize(@amount, @fully_auth_card, options)
+    assert_success response
+    assert_equal 'Succeeded', response.message
+    assert response.authorization
+  end
+
+  def test_successful_authorize_with_auth_data_via_normalized_3ds2_options
+    version = '2.0'
+    eci = '02'
+    cavv = 'jJ81HADVRtXfCBATEp01CJUAAAA='
+    ds_transaction_id = '97267598-FAE6-48F2-8083-C23433990FBC'
+    options = @options.merge(
+      three_d_secure: {
+        version: version,
+        eci: eci,
+        cavv: cavv,
+        ds_transaction_id: ds_transaction_id
+      }
+    )
+
+    response = @gateway.authorize(@amount, @fully_auth_card, options)
+    assert_success response
+    assert_equal 'Succeeded', response.message
+    assert response.authorization
   end
 
   def test_failed_authorize
@@ -165,7 +265,7 @@ class RemoteCredoraxTest < Test::Unit::TestCase
     clean_transcript = @gateway.scrub(transcript)
 
     assert_scrubbed(@credit_card.number, clean_transcript)
-    assert_scrubbed(@credit_card.verification_value.to_s, clean_transcript)
+    assert_cvv_scrubbed(clean_transcript)
   end
 
   # #########################################################################
@@ -478,4 +578,10 @@ class RemoteCredoraxTest < Test::Unit::TestCase
   #   assert_success void
   #   assert_equal "Succeeded", void.message
   # end
+
+  private
+
+  def assert_cvv_scrubbed(transcript)
+    assert_match(/b5=\[FILTERED\]/, transcript)
+  end
 end
